--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,6 +147,7 @@ all = [
     "elasticsearch==9.1.0",
 
     "qdrant-client==1.14.3",
+    "weaviate-client==4.17.0",
     "pymilvus==2.6.2",
     "pinecone==6.0.2",
     "oracledb==3.2.0",
