--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -59,6 +59,7 @@ pyarrow==20.0.0 # fix: pin pyarrow version to 20 for rpi compatibility #15897
 einops==0.8.1 
 
 ftfy==6.2.3
+chardet==5.2.0
 pypdf==6.0.0
 fpdf2==2.8.2
 pymdown-extensions==10.14.2
