--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,8 @@ dependencies = [
     "PyMySQL==1.1.1",
     "boto3==1.40.5",
     
-    "transformers",
-    "sentence-transformers==5.1.1",
+    "transformers==4.57.3",
+    "sentence-transformers==5.1.2",
     "accelerate",
     "pyarrow==20.0.0",
     "einops==0.8.1",
